feat: added meta desc

--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,8 @@
 
 <head>
 	<meta charset="utf-8" />
+	<meta name="description" content="Hi! I'm Joseph, also knows as TheWisePigeon. I enjoy building things on the web and beyond. Focused on crafting performant and reliable services in order to deliver the best experience possible to end users.
+	I read, write, work on side projects or play video games in my spare time.">	
 	<link rel="icon" href="%sveltekit.assets%/images/favicon.png" />
 	<meta name="viewport" content="width=device-width" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
